# Polymarket-P-L-Substreams

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  schema.sql  substreams.yaml
.cargo/: config.toml
docs/plans/: 2026-02-07-polymarket-pnl-v2-production-grade.md
migrations/: v2.0.0-indexes.sql  v2.0.0-mat-views.sql
proto/: pnl.proto
scripts/: refresh-mat-views.sh
src/: abi.rs  lib.rs
src/pb/: .last_generated_hash  mod.rs
