[package]
name = "polymarket_pnl"
version = "1.1.0"
edition = "2021"
description = "Polymarket Profit & Loss Substreams with SQL Sink Support"
repository = "https://github.com/PaulieB14/Polymarket-P-L-Substreams"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
# Substreams core
substreams = "0.7"
substreams-ethereum = "0.11"

# Database sink support
substreams-database-change = "4"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Utilities
ethabi = "18"
hex-literal = "0.3"
num-bigint = "0.4"
num-traits = "0.2"

# WASM compatibility
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
substreams-ethereum = "0.11"
anyhow = "1"
regex = "1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
